--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,20 +1,34 @@
 <div class="row">
     <div class="col-sm-4">
         <div class="card">
-            <div id="pieChart"></div>
+            <div id="productionVariety"></div>
         </div>
     </div>
     <div class="col-sm-4">
         <div class="card">
-            <div id="barChart"></div>
+            <div id="acumulatedByProducer"></div>
         </div>
     </div>
     <div class="col-sm-4">
         <div class="card">
-
+            <div></div>
         </div>
     </div>
 </div>
-<div class="card">
-    <div id="barChartTime"></div>
+<div class="row">
+    <div class="col-sm-4">
+        <div class="card">
+            <div id=""></div>
+        </div>
+    </div>
+    <div class="col-sm-4">
+        <div class="card">
+            <div></div>
+        </div>
+    </div>
+    <div class="col-sm-4">
+        <div class="card">
+            <div></div>
+        </div>
+    </div>
 </div>
