--- a/app/views/humidity/humidityAdd.html
+++ b/app/views/humidity/humidityAdd.html
@@ -8,7 +8,7 @@
                 <div class="form-group">
                     <div class="col-sm-12">
                         <div class="fg-line">
-                            <input type="text" class="form-control input-sm" id="isearch" placeholder="buscar...." data-ng-model="searchReceptionEntries">
+                            <input class="form-control input-sm" id="isearch" placeholder="buscar...." ng-model="searchReceptionEntries">
                         </div>
                     </div>
                 </div>
