--- a/app/views/humidity/humidityAddToCylinder.html
+++ b/app/views/humidity/humidityAddToCylinder.html
@@ -1,6 +1,6 @@
 <div class="animated bounceInRight">
     <div class="card">
-        <form name="humidity" class="form-horizontal" role="form">
+        <form name="humidityForm" class="form-horizontal" role="form">
             <div class="card-header">
                 <h2>Captura de Humedad</h2>
             </div>
@@ -9,13 +9,14 @@
                     <label for="iusername" class="col-sm-2 control-label">Porcentaje de Humedad</label>
                     <div class="col-sm-10">
                         <div class="fg-line">
-                            <input required type="text" class="form-control input-sm" id="iusername" placeholder="porcentaje de humedad" data-ng-model="humidityPercentage">
+                            <input required type="number" min="1" name="humidityPer" class="form-control input-sm" id="iusername" placeholder="porcentaje de humedad" ng-model="humidityPercentage">
+                            <small class="help-block has-error" style="color:red" ng-show="humidityForm.humidityPer.$error.number">Numero no valido.</small>
                         </div>
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
-                        <button type="submit" class="btn btn-primary btn-sm" data-ng-click="saveHumidity(humidityPercentage)" ng-disabled="!humidity.$valid">Guardar</button>
+                        <button type="submit" class="btn btn-primary btn-sm" data-ng-click="saveHumidity(humidityPercentage)" ng-disabled="!humidityForm.$valid">Guardar</button>
                     </div>
                 </div>
             </div>
