--- a/app/views/report/producerReport.html
+++ b/app/views/report/producerReport.html
@@ -3,7 +3,7 @@
         <div class="card-header">
             <div class="row">
                 <div class="col-md-6">
-                    <h2>Reporte (Productor)</h2>
+                    <h2>Reporte de Produccion (Productor)</h2>
                 </div>
                 <div class="col-md-6">
                     <div class="form-group">
@@ -21,17 +21,17 @@
             <table datatable="ng" dt-options="dtOptions" class="table table-striped table-bordered">
                 <thead>
                     <tr>
-                        <th>Fecha</th>
+                        <th>Fecha de Captura</th>
                         <th>Variedad</th>
                         <th>Remisión</th>
                         <th>Cilindro</th>
                         <th>Folio</th>
                         <th>Kgs. Origen</th>
                         <th>Fecha de Proceso</th>
-                        <th>Sacos</th>
-                        <th>Kilogramos</th>
+                        <th>Sacos de Primera</th>
+                        <th>Kgs. de Primera</th>
                         <th>Sacos Segunda</th>
-                        <th>Kilogramos</th>
+                        <th>Kgs. de Segunda</th>
                         <th>Total</th>
                     </tr>
                 </thead>
@@ -43,7 +43,7 @@
                         <td>{{report.Cylinder}}</td>
                         <td>{{report.Folio}}</td>
                         <td>{{report.KgsOrigen}}</td>
-                        <td>{{report.ProcessDate}}</td>
+                        <td>{{report.ProcessDate | date:'dd/MM/yyyy HH:mm'}}</td>
                         <td>{{report.SacksP}}</td>
                         <td>{{report.KilosFirst}}</td>
                         <td>{{report.SacksS}}</td>
