--- a/app/views/users.html
+++ b/app/views/users.html
@@ -1,6 +1,6 @@
 <div class="animated bounceInRight">
     <div class="card">
-        <form class="form-horizontal" role="form">
+        <form name="userForm" class="form-horizontal" role="form">
             <div class="card-header">
                 <h2>Alta de Usuarios</h2>
             </div>
@@ -9,7 +9,8 @@
                     <label for="iusername" class="col-sm-2 control-label">Usuario</label>
                     <div class="col-sm-10">
                         <div class="fg-line">
-                            <input type="text" class="form-control input-sm" id="iusername" placeholder="Nombre de Usuario" data-ng-model="registration.UserName">
+                            <input name="user" type="text" class="form-control input-sm" id="iusername" placeholder="Nombre de Usuario" ng-minlength="8" data-ng-model="registration.UserName" required>
+                            <small class="help-block has-error" style="color:red" ng-show="userForm.user.$error.minlength">El nombre de usuario debe contener al menos 8 caracteres.</small>
                         </div>
                     </div>
                 </div>
@@ -17,7 +18,8 @@
                     <label for="useremail" class="col-sm-2 control-label">Email</label>
                     <div class="col-sm-10">
                         <div class="fg-line">
-                            <input type="text" class="form-control input-sm" id="useremail" placeholder="email" data-ng-model="registration.Email">
+                            <input name="email" type="email" class="form-control input-sm" id="useremail" placeholder="email" data-ng-model="registration.Email" required>
+                            <small class="help-block has-error" style="color:red" ng-show="userForm.email.$invalid && !userForm.email.$pristine">El formato de correo no es correcto.</small>
                         </div>
                     </div>
                 </div>
@@ -25,7 +27,8 @@
                     <label for="ipassword" class="col-sm-2 control-label">Contraseña</label>
                     <div class="col-sm-10">
                         <div class="fg-line">
-                            <input type="password" class="form-control input-sm" id="ipassword" placeholder="contraseña" data-ng-model="registration.Password">
+                            <input name="pass" type="password" class="form-control input-sm" id="ipassword" placeholder="contraseña" data-ng-model="registration.Password" ng-minlength="8" required>
+                            <small class="help-block has-error" style="color:red" ng-show="userForm.pass.$error.minlength">La Contraseña debe contener al menos 8 caracteres.</small>
                         </div>
                     </div>
                 </div>
@@ -33,7 +36,11 @@
                     <label for="icpassword" class="col-sm-2 control-label">Confirmar contraseña</label>
                     <div class="col-sm-10">
                         <div class="fg-line">
-                            <input type="password" class="form-control input-sm" id="icpassword" placeholder="confirmar contraseña" data-ng-model="registration.ConfirmPassword">
+                            <input name="confirmPass" type="password" class="form-control input-sm" id="icpassword" placeholder="confirmar contraseña"
+                                ng-model="registration.ConfirmPassword" ng-minlength="8" confirm-password="registration.Password"
+                                required>
+                            <small class="help-block has-error" style="color:red" ng-show="userForm.confirmPass.$invalid && !userForm.confirmPass.$pristine">Las Contraseñas no coinciden.</small>
+                            <small class="help-block has-error" style="color:red" ng-show="userForm.confirmPass.$error.minlength">La Contraseña debe contener al menos 8 caracteres.</small>
                         </div>
                     </div>
                 </div>
@@ -47,7 +54,7 @@
                 </div>
                 <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
-                        <button type="submit" class="btn btn-primary btn-sm" data-ng-click="signUp(registration)">Enviar</button>
+                        <button type="submit" class="btn btn-primary btn-sm" data-ng-click="signUp(registration)" ng-disabled="!userForm.$valid">Enviar</button>
                     </div>
                 </div>
             </div>
@@ -81,9 +88,7 @@
                         <td>{{user.UserName}}</td>
                         <td>{{user.Role}}</td>
                         <td>
-                            <button class="btn btn-icon command-edit" data-toggle="modal" onclick="location.href='#modalWider'">
-                        <span class="md md-edit"></span>
-                    </button>
+                            </button>
                             <button class="btn btn-icon command-delete" ng-click="deleteUser(user.Id)">
                         <span class="md md-delete"></span>
                     </button>
