--- a/app/views/cylinder.html
+++ b/app/views/cylinder.html
@@ -6,7 +6,7 @@
             </div>
             <div class="card-body card-padding">
                 <div class="form-group">
-                    <label for="iusername" class="col-sm-2 control-label">Nombre</label>
+                    <label for="iusername" class="col-sm-2 control-label">Nombre *</label>
                     <div class="col-sm-10">
                         <div class="fg-line">
                             <input name="cylinderName" type="text" class="form-control input-sm" id="iusername" placeholder="Nombre del cilindro" ng-maxlength="20" ng-model="cylinder.CylinderName" required>
