--- a/app/views/field.html
+++ b/app/views/field.html
@@ -6,7 +6,7 @@
             </div>
             <div class="card-body card-padding">
                 <div class="form-group">
-                    <label for="iusername" class="col-sm-2 control-label">Nombre</label>
+                    <label for="iusername" class="col-sm-2 control-label">Nombre *</label>
                     <div class="col-sm-10">
                         <div class="fg-line">
                             <input required type="text" name="fieldName" class="form-control input-sm" id="iusername" ng-maxlength="100" ng-minlength="3" placeholder="nombre del campo" data-ng-model="field.FieldName">
@@ -16,7 +16,7 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="iusername" class="col-sm-2 control-label">Hectareas</label>
+                    <label for="iusername" class="col-sm-2 control-label">Hectareas *</label>
                     <div class="col-sm-10">
                         <div class="fg-line">
                             <input required name="hectares" type="number" min="1" class="form-control input-sm" id="iusername" placeholder="hectareas" data-ng-model="field.Hectares">
