--- a/app/views/producersAndVarieties.html
+++ b/app/views/producersAndVarieties.html
@@ -7,7 +7,7 @@
                 </div>
                 <div class="card-body card-padding">
                     <div class="form-group">
-                        <label for="iusername" class="col-sm-2 control-label">Nombre</label>
+                        <label for="iusername" class="col-sm-2 control-label">Nombre *</label>
                         <div class="col-sm-10">
                             <div class="fg-line">
                                 <input name="prodName" type="text" required class="form-control input-sm" id="iusername" ng-minlength="3" ng-maxlength="150"
@@ -34,7 +34,7 @@
                 </div>
                 <div class="card-body card-padding">
                     <div class="form-group">
-                        <label for="ivariety" class="col-sm-2 control-label">Nombre</label>
+                        <label for="ivariety" class="col-sm-2 control-label">Nombre *</label>
                         <div class="col-sm-10">
                             <div class="fg-line">
                                 <input name="varietyName" type="text" class="form-control input-sm" id="ivariety" ng-minlength="3" ng-maxlength="150" placeholder="variedad" ng-model="variety.varietyName" required>
