--- a/app/views/remission/remissionAdd.html
+++ b/app/views/remission/remissionAdd.html
@@ -6,81 +6,88 @@
             </div>
             <div class="card-body card-padding">
                 <div class="form-group">
-                    <label for="folio" class="col-sm-2 control-label">Folio</label>
+                    <label for="folio" class="col-sm-2 control-label">Folio *</label>
                     <div class="col-sm-10">
                         <div class="fg-line disabled">
-                            <input type="text" readonly class="form-control input-sm" id="folio"  data-ng-model="folio">
+                            <input required readonly class="form-control input-sm" id="folio" data-ng-model="folio">
                         </div>
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="cultivation" class="col-sm-2 control-label">Cultivo</label>
+                    <label for="cultivation" class="col-sm-2 control-label">Cultivo *</label>
                     <div class="col-sm-10">
                         <div class="fg-line">
-                            <input type="text" class="form-control input-sm" id="cultivation" name="Cultivation" placeholder="cultivo" data-ng-model="remission.Cultivation">
-                            <small class="help-block has-error" style="color:red" ng-show="!remissionForm.$pristine && remissionForm.Cultivation.$error.required">Cultivo es requerido.</small>
+                            <input required type="text" name="Cultivation" class="form-control input-sm" id="cultivation" placeholder="cultivo" ng-minlength="3"
+                                ng-maxlength="150" data-ng-model="remission.Cultivation">
+                            <small class="help-block has-error" style="color:red" ng-show="remissionForm.Cultivation.$error.minlength">Este campo debe contener al menos 3 caracteres.</small>
+                            <small class="help-block has-error" style="color:red" ng-show="remissionForm.Cultivation.$error.maxlength">Este campo es demasiado extenso, debe contener menos de 150 caracteres.</small>
                         </div>
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="batch" class="col-sm-2 control-label">Huerta/Lote</label>
+                    <label for="batch" class="col-sm-2 control-label">Huerta/Lote *</label>
                     <div class="col-sm-10">
                         <div class="fg-line">
-                            <input type="text" class="form-control input-sm" id="batch" placeholder="huerta o lote" name="Batch" data-ng-model="remission.Batch">
-                            <small class="help-block has-error" style="color:red" ng-show="!remissionForm.$pristine && remissionForm.Batch.$error.required">Huerta o lote es requerido.</small>
+                            <input required type="text" name="Batch" class="form-control input-sm" id="batch" placeholder="huerta o lote" ng-minlength="3"
+                                ng-maxlength="150" data-ng-model="remission.Batch">
+                            <small class="help-block has-error" style="color:red" ng-show="remissionForm.Batch.$error.minlength">Este campo debe contener al menos 3 caracteres.</small>
+                            <small class="help-block has-error" style="color:red" ng-show="remissionForm.Batch.$error.maxlength">Este campo es demasiado extenso, debe contener menos de 150 caracteres.</small>
                         </div>
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="quantity" class="col-sm-2 control-label">Cantidad</label>
+                    <label for="quantity" class="col-sm-2 control-label">Cantidad *</label>
                     <div class="col-sm-10">
                         <div class="fg-line">
-                            <input type="number" min="1" step="any" class="form-control input-sm" id="quantity" placeholder="cantidad" name="Quantity" data-ng-model="remission.Quantity">
-                            <small class="help-block has-error" style="color:red" ng-show="!remissionForm.$pristine && remissionForm.Quantity.$error.required">Cantidad es requerido.</small>
-                            <small class="help-block has-error" style="color:yellow" ng-show="!remissionForm.$pristine && remissionForm.Quantity.$error.number">Cantidad debe ser campo númerico.</small>
+                            <input type="number" min="1" name="Quantity" class="form-control input-sm" id="quantity" placeholder="cantidad" data-ng-model="remission.Quantity">
+                            <small class="help-block has-error" style="color:red" ng-show="remissionForm.Quantity.$error.number">Numero no valido.</small>
                         </div>
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="butler" class="col-sm-2 control-label">Mayordomo</label>
+                    <label for="butler" class="col-sm-2 control-label">Mayordomo *</label>
                     <div class="col-sm-10">
                         <div class="fg-line">
-                            <input type="text" class="form-control input-sm" id="butler" placeholder="mayordomo" name="Butler" data-ng-model="remission.Butler">
-                            <small class="help-block has-error" style="color:red" ng-show="!remissionForm.$pristine && remissionForm.Butler.$error.required">Mayordomo es requerido.</small>
+                            <input required type="text" name="Butler" class="form-control input-sm" id="butler" placeholder="mayordomo" ng-minlength="3"
+                                ng-maxlength="150" data-ng-model="remission.Butler">
+                            <small class="help-block has-error" style="color:red" ng-show="remissionForm.Butler.$error.minlength">Este campo debe contener al menos 3 caracteres.</small>
+                            <small class="help-block has-error" style="color:red" ng-show="remissionForm.Butler.$error.maxlength">Este campo es demasiado extenso, debe contener menos de 150 caracteres.</small>
                         </div>
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="transportNumber" class="col-sm-2 control-label">Transporte No.</label>
+                    <label for="transportNumber" class="col-sm-2 control-label">Transporte No. *</label>
                     <div class="col-sm-10">
                         <div class="fg-line">
-                            <input type="number" min="1" class="form-control input-sm" id="transportNumber" placeholder="Nombre de Usuario" name="TransportNumber" data-ng-model="remission.TransportNumber">
-                            <small class="help-block has-error" style="color:red" ng-show="!remissionForm.$pristine && remissionForm.TransportNumber.$error.required">Número Transporte es requerido.</small>
-                            <small class="help-block has-error" style="color:yellow" ng-show="!remissionForm.$pristine && remissionForm.TransportNumber.$error.number">Debe ser campo númerico.</small>
+                            <input required type="number" min="1" name="Transportnumber" class="form-control input-sm" id="transportNumber" placeholder="numero de transporte"
+                                data-ng-model="remission.TransportNumber">
+                            <small class="help-block has-error" style="color:red" ng-show="remissionForm.Transportnumber.$error.number">Numero no valido.</small>
                         </div>
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="driver" class="col-sm-2 control-label">Conductor</label>
+                    <label for="driver" class="col-sm-2 control-label">Conductor *</label>
                     <div class="col-sm-10">
                         <div class="fg-line">
-                            <input type="text" class="form-control input-sm" id="driver" placeholder="conductor" name="Driver" data-ng-model="remission.Driver">
-                            <small class="help-block has-error" style="color:red" ng-show="!remissionForm.$pristine && remissionForm.Driver.$error.required">Conductor es requerido.</small>
+                            <input type="text" name="Driver" class="form-control input-sm" id="driver" placeholder="conductor" ng-minlength="3" ng-maxlength="150" data-ng-model="remission.Driver">
+                            <small class="help-block has-error" style="color:red" ng-show="remissionForm.Driver.$error.minlength">El nombre del conductor debe contener al menos 3 caracteres.</small>
+                            <small class="help-block has-error" style="color:red" ng-show="remissionForm.Driver.$error.maxlength">El nombre del conductor es demasiado extenso, debe contener menos de 150 caracteres.</small>
                         </div>
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="elaborate" class="col-sm-2 control-label">Elaboro</label>
+                    <label for="elaborate" class="col-sm-2 control-label">Elaboro *</label>
                     <div class="col-sm-10">
                         <div class="fg-line">
-                            <input type="text" class="form-control input-sm" id="elaborate" placeholder="elaboro" name="Elaborate" data-ng-model="remission.Elaborate">
-                            <small class="help-block has-error" style="color:red" ng-show="!remissionForm.$pristine && remissionForm.Elaborate.$error.required">Elaboro es campo requerido.</small>
+                            <input required name="Elaborate" type="text" class="form-control input-sm" id="elaborate" placeholder="elaboro" ng-minlength="3" ng-maxlength="150" data-ng-model="remission.Elaborate">
+                            <small class="help-block has-error" style="color:red" ng-show="remissionForm.Elaborate.$error.minlength">Este campo debe contener al menos 3 caracteres.</small>
+                            <small class="help-block has-error" style="color:red" ng-show="remissionForm.Elaborate.$error.maxlength">Este campo es demasiado extenso, debe contener menos de 150 caracteres.</small>
                         </div>
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
-                        <button type="submit" class="btn btn-primary btn-sm" data-ng-click="saveRemission()" ng-disabled="!remissionForm.$valid">Guardar</button>
+                        <button type="submit" class="btn btn-primary btn-sm" data-ng-click="saveRemission(remission)" ng-disabled="!remissionForm.$valid">Guardar</button>
                     </div>
                 </div>
                 <div class="form-group">
