--- a/app/views/users.html
+++ b/app/views/users.html
@@ -6,7 +6,7 @@
             </div>
             <div class="card-body card-padding">
                 <div class="form-group">
-                    <label for="iusername" class="col-sm-2 control-label">Usuario</label>
+                    <label for="iusername" class="col-sm-2 control-label">Usuario *</label>
                     <div class="col-sm-10">
                         <div class="fg-line">
                             <input name="user" type="text" class="form-control input-sm" id="iusername" placeholder="Nombre de Usuario" ng-minlength="8" data-ng-model="registration.UserName" required>
@@ -15,7 +15,7 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="useremail" class="col-sm-2 control-label">Email</label>
+                    <label for="useremail" class="col-sm-2 control-label">Email *</label>
                     <div class="col-sm-10">
                         <div class="fg-line">
                             <input name="email" type="email" class="form-control input-sm" id="useremail" placeholder="email" data-ng-model="registration.Email" required>
@@ -24,7 +24,7 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="ipassword" class="col-sm-2 control-label">Contraseña</label>
+                    <label for="ipassword" class="col-sm-2 control-label">Contraseña *</label>
                     <div class="col-sm-10">
                         <div class="fg-line">
                             <input name="pass" type="password" class="form-control input-sm" id="ipassword" placeholder="contraseña" data-ng-model="registration.Password" ng-minlength="8" required>
@@ -33,7 +33,7 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="icpassword" class="col-sm-2 control-label">Confirmar contraseña</label>
+                    <label for="icpassword" class="col-sm-2 control-label">Confirmar contraseña *</label>
                     <div class="col-sm-10">
                         <div class="fg-line">
                             <input name="confirmPass" type="password" class="form-control input-sm" id="icpassword" placeholder="confirmar contraseña"
@@ -45,7 +45,7 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="roleF" class="col-sm-2 control-label">Roles</label>
+                    <label for="roleF" class="col-sm-2 control-label">Roles *</label>
                     <div class="col-sm-10">
                         <div class="fg-line select">
                             <select id="roleF" class="form-control" data-ng-model="registration.Role" ng-options="role.Name for role in roles"></select>
