se agrego vista de perfil y cambio de contraseña de usuario se corrigieron bugs en reportes

--- a/app/views/report/reportOrigin.html
+++ b/app/views/report/reportOrigin.html
@@ -4,7 +4,7 @@
             <h2>Produccion de Nuez (Origen) Acumulado</h2>
         </div>
         <div class="card-body table-responsive">
-            <table datatable="ng" class="table table-striped table-bordered">
+            <table datatable="ng" dt-options="dtOptions" class="table table-striped table-bordered">
                 <thead>
                     <tr>
                         <th>Huerta</th>
