--- a/app/views/report/dailyABEL.html
+++ b/app/views/report/dailyABEL.html
@@ -1,21 +1,77 @@
-<h2>Reporte Diario ABEL</h2>
-<div class="container table-responsive ">
-    <table datatable=""  dt-options="dtOptions" class="table table-striped table-bordered">
-    <thead>
-    <tr>
-        <th>Fecha</th>
-        <th>Productor</th>
-        <th>Folio</th>
-        <th>Cilindro</th>
-        <th>Variedad</th>
-        <th>Chica</th>
-        <th>Mediana</th>
-        <th>Total</th>
-        <th>% Calidad</th>
-        <th>Germinada</th>
-    </tr>
-    </thead>
-    <tbody>
-    </tbody>
-</table>
+<div class="animated bounceInRight">
+        <div class="card">
+            <form name="dailyProcessReport" class="form-horizontal" role="form">
+                <div class="card-header">
+                    <h2>Seleccionar Fecha del Reporte</h2>
+                </div>
+                <div class="card-body card-padding">
+                    <div class="form-group">
+                        <label for="iusername" class="col-sm-2 control-label">Fecha</label>
+                        <div class="col-sm-10">
+                        <div class="fg-line">
+                            <input type="text" required disabled class="form-control input-sm" id="reportDate" placeholder="fecha del reporte" value="{{ data.dateDropDownLink | date:'MM-dd-yyyy' }}">
+                            <div class="dropdown">
+                                <a class="dropdown-toggle" id="dropdown1" role="button" data-toggle="dropdown"><i class="large md md-event"></i></a>
+                                <ul class="dropdown-menu" role="menu">
+                                    <datetimepicker data-ng-model="data.dateDropDownLink" data-datetimepicker-config="{ dropdownSelector: '#dropdown1' }" />
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    </div>
+                    <div class="form-group">
+                    <div class="col-sm-offset-2 col-sm-10">
+                        <button type="submit" class="btn btn-primary btn-sm" data-ng-click="getDailyProcessReport(data.dateDropDownLink)">Generar Reporte</button>
+                    </div>
+                </div>
+                </div>
+            </form>
+        </div>
+    <div class="card">
+        <div class="card-header">
+            <h2>Reporte Diario ABEL</h2>
+        </div>
+        <div class="card-body table-responsive ">
+            <table id="daily" datatable="ng" dt-options="dtOptions" class="table table-striped table-bordered">
+                <thead>
+                    <tr>
+                        <th>Fecha</th>
+                        <th>Productor</th>
+                        <th>Folio</th>
+                        <th>Cilindro</th>
+                        <th>Variedad</th>
+                        <th>Chica</th>
+                        <th>Mediana</th>
+                        <th>Total</th>
+                        <th>% Calidad</th>
+                        <th>Germinada</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr ng-repeat="report in dailyProcess">
+                        <td>{{report.Date | date: 'medium'}}</td>
+                        <td>{{report.Producer}}</td>
+                        <td>{{report.Folio}}</td>
+                        <td>{{report.Cylinder}}</td>
+                        <td>{{report.Variety}}</td>
+                        <td>{{report.SacksFirstSmall}}</td>
+                        <td>{{report.SacksFirstMedium}}</td>
+                        <td>{{report.Total}}</td>
+                        <td>{{report.QualityPercent}}</td>
+                        <td>{{report.Germinated}}</td>
+                    </tr>
+                </tbody>
+                <tfoot>
+                    <tr>
+                        <td colspan="5"> Total: </td> 
+                        <td>{{getTotalSmallSacks()}}</td>
+                        <td>{{getTotalMediumSacks()}}</td>
+                        <td>{{getTotal()}}</td>
+                        <td></td>
+                        <td>{{getTotalGerminated()}}</td>
+                    </tr>
+                </tfoot>
+            </table>
+        </div>
+    </div>
 </div>
